syntax = "proto3";
package cosmos.authz.v1beta1;

import "cosmos_proto/cosmos.proto";

option go_package = "cosmossdk.io/x/authz";

// EventGrant is emitted on Msg/Grant
//
// Since: cosmos-sdk 0.43
message EventGrant {
  // Msg type URL for which an authorization is granted
  string msg_type_url = 2;
  // Granter account address
  string granter = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // Grantee account address
  string grantee = 4 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// EventRevoke is emitted on Msg/Revoke
//
// Since: cosmos-sdk 0.43
message EventRevoke {
  // Msg type URL for which an authorization is revoked
  string msg_type_url = 2;
  // Granter account address
  string granter = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // Grantee account address
  string grantee = 4 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// EventPruneExpiredGrants is emitted on Msg/PruneExpiredGrants
//
// Since: x/authz 1.0.0
message EventPruneExpiredGrants {
  // Address of the pruner
  string pruner = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}
